--- a/portfolio.html
+++ b/portfolio.html
@@ -176,21 +176,23 @@
             <i class="fa fa-user-circle"></i>
             <h5 id="h1">Filcy</h5>
             <p id="name">M.Com, Bangalore</p>
-            <p class="para"> She is very hardworking, dedicated, optimistic towards her work. she is a good team player, Always energetic & eager to learn new skills.</p>
+            <p class="para"> You are very hardworking, dedicated, optimistic towards your work. your are a good team player, Always energetic & eager to learn new skills.</p>
         </div>
           <div class="person-2">
             <i class="fa fa-user-circle"></i>
           <h5 id="h2">Sandhya C </h5>
           <p id="name1">Teacher, Hosur</p> 
           <p class="para">
-            She belive in both hardwork and act accordingly to do smart work.and she understands situation and behave wisely. which will be benificial to the company.
+          You belive in both hardwork and act accordingly to do smart work.and you understands situation and behave wisely, which will be benificial to the company.
           </p>
           </div>
           <div class="person-3">
             <i class="fa fa-user-circle"></i>
           <h5 id="h3">Yaseen</h5>
-          <p id="name2">MyTravel.com</p>
-          <p class="para"></p>
+          <p id="name2">MyTravel</p>
+          <p class="para">
+            You are very hardworking, dedicated, optimistic towards your work. your are a good team player, Always energetic & eager to learn new skills.
+          </p>
           </div> 
         </div>
         <div class="section-4">
@@ -215,13 +217,13 @@
                <form name="submit-to-google-sheet">
                 <h4>Send me a message</h4>
                 <label for="name">First & Last Name<span>*</span></label> <br>
-                <input type="text" name="Name"/> <br>
+                <input type="text" name="Name" aria-controls="" required/> <br>
                 <label for="name">Phone number<span>*</span></label><br>
-                <input type="text" name="Phone Number"><br>
+                <input type="text" name="Phone Number" maxlength="10" required><br>
                 <label for="name">Email address<span>*</span></label><br>
-                <input type="email" name="Email"><br>
+                <input type="email" name="Email" required><br>
                 <label for="name">Message<span>*</span></label><br>
-                <textarea name="Message" placeholder="your message here" cols="20" rows="10"></textarea><br>
+                <textarea name="Message" placeholder="your message here" cols="20" rows="10" required></textarea><br>
                 <input type="submit" value="Send Message">
                </form>
                <span id="msg"> </span>
