--- a/portfolio.html
+++ b/portfolio.html
@@ -139,11 +139,11 @@
     <div class="resume" id="resume">
         <h2>Resume</h2>
         <div class="section-1">
-         <h4><li>Work Experience</li></h4>
+         <h4><li>Certification</li></h4>
          <hr class="horiz-line">
-         <p id="designation">Junior Front End Developer-Internship</p>
-         <button id="btn3">2021-2022</button>
-         <p id="company">Reactz Technology</p>
+         <p id="designation">PrepBytes- Full Stack Developer</p>
+         <button id="btn3">2022-Present</button>
+         <p id="company">Prepbytes</p>
             <br>
             <hr class="vertical-line">
          <h4 class="text2"><li>Education</li></h4>
@@ -169,31 +169,33 @@
     </div>
 
     <!-- feedback section -->
-    <div class="feedback" >
+    <div class="feedback">
         <h2>What People say about me</h2>
         <div class="section-3">
-        <div class="person-1">
-            <i class="fa fa-user-circle"></i>
-            <h5 id="h1">Filcy</h5>
-            <p id="name">M.Com, Bangalore</p>
-            <p class="para"> You are very hardworking, dedicated, optimistic towards your work. your are a good team player, Always energetic & eager to learn new skills.</p>
-        </div>
-          <div class="person-2">
-            <i class="fa fa-user-circle"></i>
-          <h5 id="h2">Sandhya C </h5>
-          <p id="name1">Teacher, Hosur</p> 
-          <p class="para">
-          You belive in both hardwork and act accordingly to do smart work.and you understands situation and behave wisely, which will be benificial to the company.
-          </p>
-          </div>
-          <div class="person-3">
-            <i class="fa fa-user-circle"></i>
-          <h5 id="h3">Yaseen</h5>
-          <p id="name2">MyTravel</p>
-          <p class="para">
-            You are very hardworking, dedicated, optimistic towards your work. your are a good team player, Always energetic & eager to learn new skills.
-          </p>
-          </div> 
+            <div class="person-1">
+                <img src="feedback1.jpg" alt="friend 1" class="small-img">
+                <h5 id="h1">Filcy C J</h5>
+                <p id="name">Senior</p>
+                <p class="para"> Gayathri is very hardworking, dedicated, optimistic towards at your work, and a good team
+                    player, Always energetic & eager to learn new skills.</p>
+            </div>
+            <div class="person-2">
+                <img src="feedback2.jpg" alt="friend 2" class="small-img" />
+                <h5 id="h2">Sandhya C </h5>
+                <p id="name1">Friend</p>
+                <p class="para">
+                    Gayathri belives in both hardwork and act accordingly to do smart work. and she understands situation
+                    and behave wisely.
+                </p>
+            </div>
+            <div class="person-3">
+                <img src="feedback3.jpg" alt="friend 3" class="small-img" />
+                <h5 id="h3">Arpana Kashyap</h5>
+                <p id="name2">Prepbytes EA</p>
+                <p class="para">
+                    Gayathri has good communication skill, and she is very passionate about her work.
+                </p>
+            </div>
         </div>
         <div class="section-4">
             <p>View more testimonials <i class="fa fa-arrow-right"></i> </p>
