--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
         <div class="details">
             <h2>About Me</h2>
             <p>My Name is Gayathri D R, i completed my graduation from Krupanidhi Group of Institution in Bachelor's of Computer Application (BCA) stream with 8.3 cgpa(Hons).</p>
-            <p>I did an internship on Frontend web development. Where i learn to develop responsive web pages using HTML5, CSS3 and JavaScript. To design creative and user friendly pages uisng React.js, JavaScript Liberary to makes pages more efficient.
+            <p>I did an internship on Frontend web development. Where i learn to develop responsive web pages using HTML5, CSS3 and JavaScript. To design creative and user friendly pages using React.js, JavaScript Liberary to make pages more efficient.
             </p>
             <div class="skills">
                 <p>Languages/Library/Technology</p>
@@ -208,7 +208,7 @@
        
             <div class="address">
                 <h4>Let's connect</h4>
-                <p>I am Full-Stack Developer. Connect with me via gmail or phone:</p><br>
+                <p>If you have any questions or want to hire me, <br> Connect with me via gmail or phone:</p><br>
                 
                 <img src="email.svg" alt="mail"> <a href="mailto:gayathri.rd1998@gmail.com">gayathri.rd1998@gmail.com</a><br> <br>
                  <img src="phone (1).svg" alt="phone"> +91 9620828154
